--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -3,6 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <title><%= typeof title !== "undefined" ? title : "ImperialPaws Pekingese" %></title>
+  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  
+  
+  
+  
+  
   <link
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -15,7 +23,7 @@
 <link rel="stylesheet" href="/css/header.css">
 <link rel="stylesheet" href="/css/footer.css">
 <link rel="stylesheet" href="/css/admin.css">
-
+<link rel="stylesheet" href="/css/global.css">
 
 <link rel="stylesheet" href="/css/about.css">
 
