--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -23,8 +23,8 @@
 <link rel="stylesheet" href="/css/header.css">
 <link rel="stylesheet" href="/css/footer.css">
 <link rel="stylesheet" href="/css/admin.css">
+<link rel="stylesheet" href="/css/main.css">
 <link rel="stylesheet" href="/css/global.css">
-
 <link rel="stylesheet" href="/css/about.css">
 
   <link rel="stylesheet" href="/css/home-index.css">
