--- a/views/home/about.ejs
+++ b/views/home/about.ejs
@@ -8,8 +8,8 @@
   </div>
 </section>
 
-<section class="page-content">
-  <div class="container narrow">
+<section class="page-content reveal">
+  <div class="container narrow reveal">
 
     <p>
       ImperialPaws is a small, dedicated Pekingese breeding program built on
