--- a/views/home/apply.ejs
+++ b/views/home/apply.ejs
@@ -1,6 +1,6 @@
 <div class="page-application">
 
-  <section class="page-hero">
+  <section class="page-hero reveal">
     <div class="container">
       <h1>Adoption Application</h1>
       <p class="subtitle">
@@ -9,7 +9,7 @@
     </div>
   </section>
 
-  <section class="page-content">
+  <section class="page-content reveal">
     <div class="container narrow">
 
       <form method="POST" action="/apply" class="application-form">
