--- a/views/home/contact.ejs
+++ b/views/home/contact.ejs
@@ -7,8 +7,8 @@
   </div>
 </section>
 
-<section class="page-content">
-  <div class="container narrow">
+<section class="page-content reveal">
+  <div class="container narrow reveal">
 
     <p>
       Thank you for your interest in ImperialPaws Pekingese. We welcome
