--- a/views/home/faq.ejs
+++ b/views/home/faq.ejs
@@ -7,8 +7,8 @@
   </div>
 </section>
 
-<section class="page-content">
-  <div class="container narrow faq">
+<section class="page-content reveal">
+  <div class="container narrow faq reveal">
 
     <h2>Why do you require an adoption application?</h2>
     <p>
