--- a/views/home/puppies.ejs
+++ b/views/home/puppies.ejs
@@ -1,6 +1,6 @@
 <div class="page-puppies reveal">
 
-  <section class="page-hero">
+  <section class="page-hero reveal">
     <div class="container">
       <h1>Our Puppies</h1>
       <p class="subtitle">
@@ -9,8 +9,8 @@
     </div>
   </section>
 
-  <section class="page-content">
-    <div class="container">
+  <section class="page-content reveal">
+    <div class="container reveal">
 
       <% if (!puppies.length) { %>
         <p class="center">No puppies available at the moment.</p>
