--- a/views/home/puppy-details.ejs
+++ b/views/home/puppy-details.ejs
@@ -1,6 +1,6 @@
 <div class="page-puppy-detail">
 
-  <section class="page-hero">
+  <section class="page-hero reveal">
     <div class="container">
 <h1 class="hero-title"><%= puppy.name %></h1>
 
@@ -13,7 +13,7 @@
     </div>
   </section>
 
-  <section class="detail-content">
+  <section class="detail-content reveal">
     <div class="lux-detail-grid">
 
       <!-- IMAGE SLIDER -->
