--- a/views/home/testimonial-submit.ejs
+++ b/views/home/testimonial-submit.ejs
@@ -1,6 +1,6 @@
-<div class="page-testimonial-submit">
+<div class="page-testimonial-submit reveal">
 
-  <section class="page-hero">
+  <section class="page-hero reveal">
     <div class="container">
       <h1>Share Your Experience</h1>
       <p class="subtitle">
@@ -9,7 +9,7 @@
     </div>
   </section>
 
-  <section class="page-content">
+  <section class="page-content reveal">
     <div class="container">
 
       <% if (error) { %>
