--- a/views/home/testimonial-thankyou.ejs
+++ b/views/home/testimonial-thankyou.ejs
@@ -1,7 +1,7 @@
-<div class="page-testimonial-confirmation">
+<div class="page-testimonial-confirmation reveal">
 
-  <section class="page-hero">
-    <div class="container">
+  <section class="page-hero reveal">
+    <div class="containerv">
 
       <h1>Thank You</h1>
 
@@ -9,7 +9,7 @@
         Your testimonial has been submitted for review.
       </p>
 
-      <a href="/" class="btn-secondary">
+      <a href="/" class="btn-secondary reveal">
         Return Home
       </a>
 
