--- a/views/home/testimonials.ejs
+++ b/views/home/testimonials.ejs
@@ -7,7 +7,7 @@
   </div>
 </section>
 
-<section class="page-content">
+<section class="page-content reveal">
   <div class="container">
 
     <% if (!testimonials.length) { %>
