--- a/views/home/track-result.ejs
+++ b/views/home/track-result.ejs
@@ -1,12 +1,12 @@
-<div class="page-tracking-result">
+<div class="page-tracking-result reveal">
 
-  <section class="page-hero">
+  <section class="page-hero reveal">
     <div class="container">
       <h1>Application Status</h1>
     </div>
   </section>
 
-  <section class="page-content">
+  <section class="page-content reveal">
     <div class="container narrow">
 
       <div class="status-box">
