--- a/views/home/track.ejs
+++ b/views/home/track.ejs
@@ -1,22 +1,22 @@
-<div class="page-track">
+<div class="page-track reveal">
 
-  <section class="page-hero">
+  <section class="page-hero reveal">
     <div class="container">
       <h1>Track Your Application</h1>
 
-      <p class="track-intro">
+      <p class="track-intro reveal">
         Enter the tracking code you received after submitting your adoption
         application to view its current status.
       </p>
 
-      <p class="track-note">
+      <p class="track-note reveal">
         Status updates are posted here as decisions are made.
       </p>
     </div>
   </section>
 
-  <section class="page-content">
-    <div class="container narrow">
+  <section class="page-content reveal">
+    <div class="container narrow reveal">
 
       <% if (error) { %>
         <div class="error-box"><%= error %></div>
