--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="site-footer">
+<footer class="site-footer reveal">
   <div class="footer-inner">
 
     <!-- BRAND / STATEMENT -->
@@ -25,7 +25,7 @@
     </div>
 
     <!-- LINKS -->
-    <div class="footer-links">
+    <div class="footer-links reveal">
       <h4>Quick Links</h4>
       <ul>
         <li><a href="/">Home</a></li>
