--- a/views/home/adoption-process.ejs
+++ b/views/home/adoption-process.ejs
@@ -7,8 +7,8 @@
   </div>
 </section>
 
-<section class="page-content">
-  <div class="container narrow">
+<section class="page-content reveal">
+  <div class="container narrow reveal">
 
     <p>
       At ImperialPaws Pekingese, our adoption process is designed to ensure that
