--- a/views/home/apply-confirmation.ejs
+++ b/views/home/apply-confirmation.ejs
@@ -1,6 +1,6 @@
 <div class="page-application-confirmation">
 
-  <section class="page-hero">
+  <section class="page-hero reveal">
     <div class="container">
       <h1>Application Submitted</h1>
       <p class="subtitle">
@@ -9,7 +9,7 @@
     </div>
   </section>
 
-  <section class="page-content">
+  <section class="page-content reveal">
     <div class="container center">
 
       <div class="tracking-box">
