--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -71,7 +71,7 @@
 
 
 <script src="/js/header.js"></script>
-
+<script src="/js/site.js"></script>
 
 <script src="/js/scroll-reveal.js"></script>
 
